[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpicam_z"
version = "1.0.0"
description = "Controlador avanzado para Raspberry Pi Camera V1/V2/V3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "picamera2",
]

[tool.setuptools.packages.find]
where = ["src"]